fix mobile nav menu items not visible
Changed nav-menu-inner min-height from 100vh to 100% to fix menu items
being pushed out of view on mobile browsers where 100vh includes browser UI.

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -495,7 +495,7 @@ header
 }
 
 .nav-menu-inner {
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
